<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#93abed"
    tools:context=".Activities.NewPasswordActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/irisdamelogo" />

    <TextView
        android:id="@+id/passLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:text="@string/passLB"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/passTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/passTV"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:hint="Mobile No. or Email"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/passBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:text="@string/passBT" />


</RelativeLayout>